--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4630,9 +4630,11 @@ footer .footer-divider {
 
 @media (min-width: 480px) {
   .blog .blog-left .truncated {
-    display: block; } }
+    display: block; }
+  .blog .blog-left .entry {
+    padding-bottom: 30px; } }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .blog .blog-left {
     width: 57.62712%;
     float: left;
@@ -4731,7 +4733,7 @@ footer .footer-divider {
   position: relative;
   background-position: center; }
 
-@media (min-width: 768px) {
+@media (min-width: 480px) {
   .blog .preview-image {
     padding-top: 100%; } }
 
