--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -118,6 +118,10 @@
 						</div>
 						{{ /relate:agents }}
 					</div>
+					<div class="dotted"></div>
+					<div class="agent property-schedule">
+						<a href="{{ url }} properties" class="btn btn-garfield">Schedule a viewing</a>
+					</div>
 				</div>
 				<div class="green-specs">
 					<div class="specs">
