--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -273,6 +273,8 @@
 }
 
 .property-schedule {
+	text-align: center;
+
 	a {
 		background-color: $green;
 		padding-top: 10px;
@@ -280,10 +282,11 @@
 		display: block;
 		color: white;
 		border-radius: 0;
-		margin: 0;
+		margin: 0 auto;
 		text-align: center;
 		margin-bottom: 30px;
 		text-transform: uppercase;
+		max-width: 345px;
 		&:hover {
 			background-color: $hover-green;
 			color: white;
