--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -7,12 +7,22 @@
 		}
 	}
 	.radio {
-		display: inline-block;
-		@include span(.5 of 12);
-		margin-right: 5px;
+		@include flex-hor;
+		padding: 0;
+		margin: 0 !important;
+		&:hover {
+			cursor: default;
+		}
+		input {
+			margin: 0 !important;
+		}
+		span {
+			margin-left: 10px;
+		}
 	}
 	.btn-garfield {
 		margin-top: 10px;
+		width: 100%;
 	}
 	.sales {
 		@include span(full);
