--- a/statamic/_themes/main/templates/contact.html
+++ b/statamic/_themes/main/templates/contact.html
@@ -16,13 +16,23 @@
 			<div class="sales">
 			<h3>Sales Enquiries</h3>
 			<!-- Begin MailChimp Signup Form -->
-			<div id="mc_embed_signup">
-        {{ raven:form formset="contact" attr="action://lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928|method:post|id:mc-embedded-subscribe-form|name:mc-embedded-subscribe-form|class:validate multi|target:_blank" }}
-     		<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
-        <input type="text" value="" placeholder="First Name" name="FNAME" class="input " id="mce-FNAME">
-        <input type="text" value="" placeholder="Last Name" name="LNAME" class="input " id="mce-LNAME">
-        <input type="radio" class="radio" name="subscribe" value="Subscribe to email updates"><span class="subscribe">Subscribe to email updates</span>
-        <input type="submit" value="SEND" name="subscribe" id="mc-embedded-subscribe" class="btn-garfield">
+			<div class="input-clear" id="mc_embed_signup">
+        {{ raven:form formset="contact" attr="method:post|id:mc-embedded-subscribe-form|name:mc-embedded-subscribe-form|class:multi|target:_blank" }}
+        <div class="form-full">
+     			<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
+     		</div>
+     		<div class="form-full">
+        	<input type="text" value="" placeholder="First Name" name="FNAME" class="input " id="mce-FNAME">
+        </div>
+        <div class="form-full">
+        	<input type="text" value="" placeholder="Last Name" name="LNAME" class="input " id="mce-LNAME">
+        </div>
+        <div class="form-full radio">
+        	<input type="checkbox" name="subscribe" value="Subscribe to email updates"><span class="subscribe">Subscribe to email updates</span>
+        </div>
+        <div class="form-full">
+        	<input type="submit" value="SEND" name="subscribe" id="mc-embedded-subscribe" class="btn-garfield">
+        </div>
 
         <div id="mce-responses" class="clear">
           <div class="response" id="mce-error-response" style="display:none"></div>
