--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -36,18 +36,26 @@
 <section class="bg-gray">
 	<div class="container reports signup">
 		<h2>Register</h2>
-		<h3>Fill in the form to get the reports hot off the presses</h3>
-		<form>
+		<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=3662d5b781" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
 		  <div class="form-group half">
-		    <input type="text" id="firstName" placeholder="First Name">
+		    <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name">
 		  </div>
 		  <div class="form-group half">
-		    <input type="text" id="lastName" placeholder="Last Name">
+		    <input type="text" value="" name="LNAME" class="" id="mce-LNAME" placeholder="Last Name">
 		  </div>
 		  <div class="form-group full-span">
-		    <input type="text" id="emailAddress" placeholder="Email Address">
+		    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
 		  </div>
-		  <button type="submit" class="btn btn-contact">Send</button>
+		  <div style="position: absolute; left: -5000px;"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
+		  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-garfield">
+        <div id="mce-responses" class="clear">
+          <div class="response" id="mce-error-response" style="display:none"></div>
+          <div class="response" id="mce-success-response" style="display:none"></div>
+        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+				<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 		</form>
 	</div>
 </section>
+
+
